--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+     "start": "node server.js",
+  "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
