--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-     "start": "node server.js",
-  "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "mongoose": "^7.0.0",
