--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
