--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.2.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^7.0.0",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.1",
     "socket.io": "^4.8.1"
