--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
